--- a/server/templates/devices.html
+++ b/server/templates/devices.html
@@ -4,8 +4,10 @@
 {%endblock css%}
 {%block content %}
 <div id="slider"></div>
+<div class="ui segment">
 <div id="devices">
     <!--div class="ui active dimmer"><div class="ui large text loader">Loading</div></div-->
+</div>
 </div>
 {%endblock content%}
 {%block script %}
