--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -66,17 +66,17 @@
     <div class="item part" name="part">
         <div class="left">
             <div class="ui segment">
-                <div class="ui bottom attached label">receptor</div>
+                <div class="ui bottom attached label" name="receptor"></div>
                 <img class="ui small image element" name="receptor" src="../static/images/circuit/receptor.png">
             </div>
             <div class="ui segment">
-                <div class="ui bottom attached label">promoter</div>
+                <div class="ui bottom attached label" name="promoter"></div>
                 <img class="ui small image element" name="promoter" src="../static/images/circuit/promoter.png">
             </div>
         </div>
         <div class="right">
             <div class="ui segment">
-                <div class="ui bottom attached label">input</div>
+                <div class="ui bottom attached label" name="input"></div>
                 <img class="ui small image element" name="input" src="../static/images/circuit/input.png">
             </div>
         </div>
@@ -90,16 +90,16 @@
     </div> 
     <div class="item biobrick">
         <div class="ui segment left">
-            <div class="ui bottom attached label">input</div>
+            <div class="ui bottom attached label" name="name"></div>
             <img class="ui small image element">
         </div>
         <div class="ui segment right">
             <div class="ui ribbon label">Part_id</div>
-            <p>hehe</p>
+            <p name="id"></p>
             <div class="ui ribbon label">Part_short_name</div>
-            <p>hehe</p>
+            <p name="sname"></p>
             <div class="ui ribbon label">Part_short_desc</div>
-            <p>hehe</p>
+            <p name="sdesc"></p>
         </div>
     </div>
     <div class="item input">
@@ -110,8 +110,8 @@
         XXXXX
     </div>
     <div class="item littleoutput">
-        <div class="ui bottom attached label">input</div>
-        <img class="ui small image element" name="input" src="../static/images/circuit/output.png"><span class="ui-icon ui-icon-close delete" role="presentation">Remove</span>
+        <div class="ui bottom attached label" name="name"></div>
+        <img class="ui small image element" name="output" src="../static/images/circuit/output.png"><span class="ui-icon ui-icon-close delete" role="presentation">Remove</span>
     </div>
     <div class="item promoter">
         <img class="ui small image element" name="input" src="../static/images/circuit/promoter.png">
