--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -15,14 +15,10 @@
     <body> 
         <div class="ui vertical inverted labeled icon sidebar menu" id="index"> 
             <div class="item">
-                <a href="/">Design Biobrick</a>
-                <div class="menu">
-                    <a class="item" href="/dna">DNA</a>
-                    <a class="item" href="/parts">Parts</a>
-                    <a class="item" href="/devices">Devices</a>
-                    <a class="item" href="/circuit">Circuit</a>
-                    <a class="item" href="/vector">Vector</a>
-                </div>
+                <a href="/">Design</a> 
+            </div>
+            <div class="item">
+                <a href="/shape">Display</a>
             </div>
             <div class="item">
                 <a href="/simulation">Simulation</a>
