--- a/server/static/css/circuit.css
+++ b/server/static/css/circuit.css
@@ -1,5 +1,11 @@
 body {
     overflow:hidden;
+    /*-webkit-backface-visibility:hidden;
+    -webkit-filter: blur(3px);
+    -moz-filter: blur(3px);
+    -o-filter: blur(3px);
+    -ms-filter: blur(3px);
+    filter: blur(3px);*/
 }
 
 .ui.grid {
@@ -34,8 +40,12 @@ body {
 
 .delete {
     position:absolute;
-    top:1px;
+    top:0px;
     right:0px;
+    background:none !important;
+    height:5px;
+    width:5px;
+    padding:0px;
 }
 
 .circuit {
@@ -208,18 +218,23 @@ body {
     background:none;
 }
 
-#right-container .ui.items .item.logic img {
-    width:200px;
-    height:200px;
+.circuit .ui.items .item .ui.segment {
+    border:#10cdcc 1px solid;
+    background:none;
 }
 
 #right-container .logic {
-    width:450px;
+    width:425px;
 }
 
 #right-container .logic .left {
     width:200px;
     float:left;
+}
+
+#right-container .logic .left img {
+    height:150px;
+    width:150px;
 }
 
 #right-container .logic .right {
@@ -277,21 +292,34 @@ body {
     height:260px;
     width:300px;
     float:center;
-    background-color:rgba(0, 0, 0, 0.2);
 }
 
 .ui.items > .item.part .ui.segment {
     background-color:none;
 }
 
+.itemglass {
+    background-color:rgba(0, 0, 0, 0.2) !important;
+}
+
 .part img {
-    margin:10px auto;
+    margin:5px auto !important;
 }
 
 .part .left {
     float:left;
-    width:90px;
+    width:120px;
     height:180px;
+}
+
+.part .left .ui.segment {
+    padding:0;
+    height:110px;
+}
+
+.part .left img {
+    width:70px;
+    height:70px;
 }
 
 .part .right {
@@ -376,4 +404,13 @@ body {
 
 .item {
     margin:0 auto 10px auto !important;
+}
+
+.ui.popup {
+    background-color:rgba(0, 0, 0, 0.5);
+    color:white;
+}
+
+.ui.popup:before {
+    background-color:rgba(0, 0, 0, 0.5);
 }
