--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -2,7 +2,8 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 780px;
+  /*height: 780px;*/
+  height:100%;
   font-family: Arial, '宋体';
   /*font-size: 14px;*/
   /*background-image:-webkit-linear-gradient(top left, black, gray, rgb(142, 110, 110));*/
@@ -54,7 +55,8 @@ a {
 }
 .operate{
 	width: 100%;
-	height: 87%;
+	/*height: 87%;*/
+    height:700px;
     margin: 1% 0 .5% 0;
     top:10%;
     background:none;
