--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -160,6 +160,15 @@
     <div class="ui slider checkbox truthele">
         <input type="checkbox" name="truth"><label></label>
     </div>
+    <div class="ui basic modal" id="repressilator">
+        <i class="close icon"></i>
+        <div class="header">
+            Warning
+        </div> 
+        <div class="actions">
+            <div class="ui button">Confirm</div>
+        </div>
+    </div>
     <!--div class="ui two column divided grid part">
     <div class="row">
         <div class="column">
