--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -212,7 +212,7 @@
             <div class="ui items">
             </div>
         </div>
-        <div class="ui segment column logic">
+        <div class="ui segment column logics">
             <div class="ui items"> 
             </div>
         </div>
