--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -154,19 +154,36 @@
         <div class="ui items" id="recommendlogics">
         </div>
         <div class="actions">
-            <div class="ui button">Confirm</div>
+            <div class="ui positive right labeled icon button">Confirm<i class="checkmark icon"></i></div>
         </div>
     </div>
     <div class="ui slider checkbox truthele">
         <input type="checkbox" name="truth"><label></label>
     </div>
-    <div class="ui basic modal" id="repressilator">
+    <div class="ui basic small modal" id="repressilator">
         <i class="close icon"></i>
         <div class="header">
             Warning
-        </div> 
+        </div>
+        <div class="content">
+            <div class="left">
+                <img name="repressilator" src="../static/images/frame/Repressilator-Hg-MerR-TetR-Cl_lambda.png">
+            </div>
+            <div class="right">
+                <p>hehe</p>
+            </div>
+        </div>
         <div class="actions">
-            <div class="ui button">Confirm</div>
+            <div class="two fluid ui buttons">
+                <div class="ui negative labeled icon button">
+                    <i class="remove icon"></i>
+                    Cancel
+                </div>
+                <div class="ui positive right labeled icon button" name="clear">
+                    Confirm
+                    <i class="checkmark icon"></i>
+                </div>
+            </div>
         </div>
     </div>
     <!--div class="ui two column divided grid part">
